Adding case view

--- a/partials/case/view.html
+++ b/partials/case/view.html
@@ -1,7 +1,5 @@
 <div class="span4 well">
-    <p><strong>{{{{case.CaseNumber}}}}</strong></p>
-
-    <p>{{case.Subject}}</p>
+    <p><strong>{{case.CaseNumber}}</strong></p>
     <p>{{case.Subject}}</p>
     <p>{{case.Type}}</p>
     <p>{{case.Status}}</p>
