modified view case link

--- a/partials/case/list.html
+++ b/partials/case/list.html
@@ -9,7 +9,8 @@
     <tbody>
     <tr ng-repeat="current in cases">
         <td class='hidden-phone'>{{current.Id}}</td>
-        <td><a ng-click="doView()" >{{current.CaseNumber}}</td>
+    <!--    <td><a ng-click="doView()" >{{current.CaseNumber}}</td> -->
+        <td><a href="#/casesView/{{case.Id}}">{{current.CaseNumber}}</td>
         <td>{{current.Subject}}</td>
     </tr>
     </tbody>
