--- a/partials/case/list.html
+++ b/partials/case/list.html
@@ -10,7 +10,7 @@
     <tr ng-repeat="current in cases">
         <td class='hidden-phone'>{{current.Id}}</td>
     <!--    <td><a ng-click="doView()" >{{current.CaseNumber}}</td> -->
-        <td><a href="#/casesView/{{case.Id}}">{{current.CaseNumber}}</td>
+        <td><a href="#/casesView/{{current.Id}}">{{current.CaseNumber}}</td>
         <td>{{current.Subject}}</td>
     </tr>
     </tbody>
