--- a/partials/case/view.html
+++ b/partials/case/view.html
@@ -1,8 +1,8 @@
 <div class="span4 well">
-    <p><strong>{{sfcase.CaseNumber}}</strong></p>
-    <p>{{sfcase.Subject}}</p>
-    <p>{{sfcase.Type}}</p>
-    <p>{{sfcase.Status}}</p>
+    <p><strong>{{current.CaseNumber}}</strong></p>
+    <p>{{current.Subject}}</p>
+    <p>{{current.Type}}</p>
+    <p>{{current.Status}}</p>
 
    
         <a class="btn btn-primary" href="#/cases">Back to Cases</a>
