added edit account

--- a/partials/account/view.html
+++ b/partials/account/view.html
@@ -3,7 +3,7 @@
 
     <p>Account Number: {{account.AccountNumber}}</p>
 
-    <p>City: {{account.Email}}</a></p>
+    <p>City: {{account.BillingCity}}</a></p>
 
     <p>
         <a class="btn" href="#/accountsEdit/{{account.Id}}">Edit</a>
