--- a/partials/_about.html
+++ b/partials/_about.html
@@ -3,6 +3,7 @@
 
         <p>Built with <a href="http://angularjs.org">AngularJS</a> and <a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a>.
         </p>
+        <p>Updated with full edit of Accounts as well as Cases</p>
 
         <p>Designed for use with your <a
                 href="http://www.developerforce.com/events/regular/registration.php?d=70130000000EjHb">Salesforce
